force-app/main/default/objects/Presenter_Feedback__c/Presenter_Feedback__c.object-meta.xml
<CustomObject>
    <description>To track feedback for presenter after a Study Skills workshop</description>
    <label>Presenter Feedback (Study Skills)</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>Presenter Feedback #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presenter Feedbacks (Study Skills)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>