force-app/main/default/objects/Presenter_Feedback__c/fields/Feedbacks_In_Person__c.field-meta.xml
<CustomField>
    <fullName>Feedbacks_In_Person__c</fullName>
    <formula>IF(

AND(

Job__r.Booking__r.Delivery_Type__c= &quot;In Person&quot;,

NOT(ISBLANK(Total_Feedback__c)),

NOT(ISBLANK(Recommending__c )),

NOT(ISBLANK(Time_Well_Spent__c ))

),

1,

0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feedbacks In Person</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>