force-app/main/default/objects/Presenter_Feedback__c/fields/In_Person_Sessions__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Sessions__c</fullName>
    <formula>IF( Job__r.Booking__r.Delivery_Type__c &lt;&gt; &quot;Virtual Conference&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Person Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>