force-app/main/default/objects/Presenter_Feedback__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>WDCi: To track the job of the feedback related to</description>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipName>Presenter_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>