force-app/main/default/objects/Presenter_Feedback__c/fields/Job_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Job_Allocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>WDCi: feedback for the related job allocation</description>
    <label>Job Allocation</label>
    <referenceTo>sked__Job_Allocation__c</referenceTo>
    <relationshipName>Presenter_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>