force-app/main/default/objects/Presenter_Feedback__c/fields/Presenter__c.field-meta.xml
<CustomField>
    <fullName>Presenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>WDCi: Target presenter</description>
    <label>Presenter</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipName>Presenter_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>