force-app/main/default/objects/Presenter_Feedback__c/fields/Recommending__c.field-meta.xml
<CustomField>
    <fullName>Recommending__c</fullName>
    <description>To track the number of recommendations</description>
    <label>Total Recommending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>