force-app/main/default/objects/Presenter_Feedback__c/fields/Time_Well_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Well_Spent__c</fullName>
    <description>Track number of students rated the time well spent</description>
    <label>Total Time Well Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>