force-app/main/default/objects/Presenter_Feedback__c/fields/Total_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Total_Feedback__c</fullName>
    <description>WDCi: To track the count of feedback received for a presenter</description>
    <label>Total Feedback</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>