force-app/main/default/objects/Presenter_Feedback__c/fields/VC_Sessions__c.field-meta.xml
<CustomField>
    <fullName>VC_Sessions__c</fullName>
    <formula>IF( Job__r.Booking__r.Delivery_Type__c = &quot;Virtual Conference&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VC Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>