force-app/main/default/objects/Presenter_Feedback__c/listViews/Entering_presenter_feedback.listView-meta.xml
<ListView>
    <fullName>Entering_presenter_feedback</fullName>
    <columns>NAME</columns>
    <columns>Job_Description__c</columns>
    <columns>Presenter__c</columns>
    <columns>Total_Feedback__c</columns>
    <columns>Recommending__c</columns>
    <columns>Time_Well_Spent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Description__c</field>
        <operation>contains</operation>
        <value>22/02/2022</value>
    </filters>
    <filters>
        <field>Job_Description__c</field>
        <operation>contains</operation>
        <value>parkland</value>
    </filters>
    <filters>
        <field>Presenter__c</field>
        <operation>contains</operation>
        <value>benja</value>
    </filters>
    <label>Entering presenter feedback</label>
</ListView>